generate new tasks endpoint
